k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photos
spec:
  ingressClassName: traefik            
  rules:
    - host: photos.localhost               
      http:
        paths:
          - path: /api                
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /                    
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
